Added layout and images
Added basic layout, color variables and icons for personal information box

--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        
+        <div id="container">
+            <div id="personal">
+                <!-- personal info -->
+                <div id="img">
+                    <img id="profilepicture" src="./Images/profilbild.jpg" alt="profile picture">
+                </div>
+                <div id="info">
+                    <!-- name and info here -->
+                    <h1>Klara Frommelin</h1>
+                    <ul>
+                        <li>
+                            <img class="icons" src="./Icons/envelope.png" alt="email icon">
+                            frommflin@exempel.com
+                        </li>
+                        <li>
+                            <img class="icons" src="./Icons/phone.png" alt="email icon">
+                            0770-111 111 11
+                        </li>
+                        <li>
+                            <img class="icons" src="./Icons/home.png" alt="email icon">
+                            Exempelvägen 1, 111 11, Stad
+                        </li>
+                        <li>
+                            <img class="icons" src="./Icons/linkedin.png" alt="email icon">
+                            linkedin//exempel <!-- should become a link -->
+                        </li>
+                        <li>
+                            <img class="icons" src="./Icons/github.png" alt="email icon">
+                            github.com/Frommflin <!-- should become a link -->
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="skills">
+                <!-- skills and references -->
+            </div>
+            <div id="experience">
+                <!-- experiences -->
+            </div>
+        </div>
     </body>
 </html>
