Added skills and references

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +42,20 @@
             </div>
             <div id="skills">
                 <!-- skills and references -->
+                <div id="box">
+                    <h4>Färdigheter</h4>
+                    <p>Färdighet 1</p>
+                    <div class="skilllvl"></div>
+                    <p>Färdighet 2</p>
+                    <div class="skilllvl"></div>
+                    <p>Färdighet 3</p>
+                    <div class="skilllvl"></div>
+    
+                    <h4>Referenser</h4>
+                    <p>
+                        Referenser lämnas på begäran
+                    </p>
+                </div>
             </div>
             <div id="experience">
                 <!-- experiences -->
