Added content for experience-section, adjusted styling for cv

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="personal">
+            <div id="section1">
                 <!-- personal info -->
                 <div id="img">
                     <img id="profilepicture" src="./Images/profilbild.jpg" alt="profile picture">
@@ -22,27 +22,27 @@
                             frommflin@exempel.com
                         </li>
                         <li>
-                            <img class="icons" src="./Icons/phone.png" alt="email icon">
+                            <img class="icons" src="./Icons/phone.png" alt="phone icon">
                             0770-111 111 11
                         </li>
                         <li>
-                            <img class="icons" src="./Icons/home.png" alt="email icon">
+                            <img class="icons" src="./Icons/home.png" alt="home icon">
                             Exempelvägen 1, 111 11, Stad
                         </li>
                         <li>
-                            <img class="icons" src="./Icons/linkedin.png" alt="email icon">
+                            <img class="icons" src="./Icons/linkedin.png" alt="linkedin icon">
                             linkedin//exempel <!-- should become a link -->
                         </li>
                         <li>
-                            <img class="icons" src="./Icons/github.png" alt="email icon">
+                            <img class="icons" src="./Icons/github.png" alt="github icon">
                             github.com/Frommflin <!-- should become a link -->
                         </li>
                     </ul>
                 </div>
             </div>
-            <div id="skills">
+            <div id="section2">
                 <!-- skills and references -->
-                <div id="box">
+                <div class="box">
                     <h4>Färdigheter</h4>
                     <p>Färdighet 1</p>
                     <div class="skilllvl"></div>
@@ -57,8 +57,42 @@
                     </p>
                 </div>
             </div>
-            <div id="experience">
+            <div id="section3">
                 <!-- experiences -->
+                <div id="box1" class="box">
+                    <h4>Profil</h4>
+                    <div id="personal">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero consequuntur illo, magni architecto quasi animi possimus inventore sint sed id, quisquam mollitia delectus repudiandae repellendus deserunt eius enim explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum obcaecati, at molestiae iure iste, quaerat commodi impedit voluptate accusamus beatae iusto sed minus. Sunt quam dolore doloribus quas maiores non. Lorem ipsum dolor sit, amet consectetur adipisicing elit. At voluptates ipsa debitis sint, est molestias, labore fugit architecto earum reprehenderit odio provident placeat, incidunt neque esse maiores iusto maxime voluptate!
+                        </p>
+                    </div>
+                    <h4>Utbildning</h4>
+                    <div class="information">
+                        <div class="nestedinfo">
+                            <p>
+                                <span class="names">Utbildning</span>
+                                <span class="timespan">tidsspann</span>
+                            </p>
+                            <p class="location">Plats</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus, eveniet officia unde sed quas dolore totam perferendis quisquam ex dolorum error placeat dolorem animi facilis! Atque accusantium impedit iure?
+                            </p>
+                        </div>
+                    </div>
+                    <h4>Arbetslivserfarenhet</h4>
+                    <div class="information">
+                        <div class="nestedinfo">
+                            <p>
+                                <span class="names">Arbetsroll</span>
+                                <span class="timespan">tidsspann</span>
+                            </p>
+                            <p class="location">Arbetsplats</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus, eveniet officia unde sed quas dolore totam perferendis quisquam ex dolorum error placeat dolorem animi facilis! Atque accusantium impedit iure?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
